--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,14 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<distributionManagement>
+		<repository>
+			<id>maven-releases</id>
+			<url>http://43.201.254.64:8081/repository/maven-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>maven-releases</id>
+			<url>http://43.201.254.64:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
